# tensorboard_logger

./: .gitignore  CMakeLists.txt
include/: crc.h  tensorboard_logger.h
src/: crc.cc  tensorboard_logger.cc
tests/: test_tensorboard_logger.cc
